--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: My Website
-email: your-email@example.com
+title: MoneyBay
+email: support@moneybay.app
 description: >-
-  Write an awesome description for your new site here.
+  MoneyBay - Ứng dụng quản lý chi tiêu cá nhân thông minh, giúp bạn kiểm soát tài chính hiệu quả.
 baseurl: "/moneybay.github.io" # the subpath of your site
 url: "https://qrbayapp.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: moneybayapp
+github_username:  qrbayapp
 
 # Build settings
 theme: minima
