--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,11 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-paginate
+
+# Pagination
+paginate: 5
+paginate_path: "/blog/page/:num/"
 
 # Exclude from processing
 exclude:
