--- a/_config.yml
+++ b/_config.yml
@@ -1,32 +1,36 @@
-title: MoneyBay
-email: support@moneybay.app
+title: MoneyBay Blog
 description: >-
   MoneyBay - Ứng dụng quản lý chi tiêu cá nhân thông minh, giúp bạn kiểm soát tài chính hiệu quả.
-baseurl: "" # the subpath of your site
-url: "https://moneybay.app" # the base hostname & protocol for your site
-twitter_username: moneybayapp
-github_username:  qrbayapp
+  Blog chia sẻ kiến thức về quản lý tài chính cá nhân.
+permalink: ':title/'
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "https://moneybay.app" # the base hostname & protocol for your site, e.g. http://example.com
+site-twitter: moneybayapp #if your site has a twitter account, enter it here
 
-# Build settings
-theme: minima
+# Author Settings
+author: MoneyBay Team # add your name
+author-img: avatar_01.png # add your photo
+about-author: Chúng tôi là đội ngũ phát triển MoneyBay - ứng dụng quản lý tài chính cá nhân thông minh. # add description
+social-twitter: moneybayapp # add your Twitter handle
+social-facebook: moneybayapp # add your Facebook handle
+social-github: moneybayapp # add your Github handle
+social-linkedin: moneybayapp # add your Linkedin handle
+social-email: support@moneybay.app # add your Email address
+
+# Disqus
+discus-identifier: moneybay-blog # add your discus identifier
+
+# Tracker
+analytics: # Google Analytics
+
+# Build Settings
+markdown: kramdown
 plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
+  - jekyll-sitemap
   - jekyll-paginate
+  - jemoji
 
-# Pagination
 paginate: 5
-paginate_path: "/blog/page/:num/"
+paginate_path: "/blog/page/:num"
 
-# Exclude from processing
-exclude:
-  - .sass-cache/
-  - .jekyll-cache/
-  - gemfiles/
-  - Gemfile
-  - Gemfile.lock
-  - node_modules/
-  - vendor/bundle/
-  - vendor/cache/
-  - vendor/gems/
-  - vendor/ruby/ 
+exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
