--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: >-
   MoneyBay - Ứng dụng quản lý chi tiêu cá nhân thông minh, giúp bạn kiểm soát tài chính hiệu quả.
   Blog chia sẻ kiến thức về quản lý tài chính cá nhân.
 permalink: ':title/'
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://moneybay.app" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: moneybayapp #if your site has a twitter account, enter it here
 
