--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,6 @@ plugins:
   - jemoji
 
 paginate: 5
-paginate_path: "/blog/page/:num"
+paginate_path: "blog/page/:num"
 
 exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
